--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-webapp-assets",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Webapp Assets Middleware/Server/Generator for Express",
   "author": "Dongsu Jang <iolothebard@gmail.com>",
   "repository": {
@@ -19,6 +19,7 @@
     "jade": "^1.7.0",
     "less": "^2.0.0",
     "lodash": "^2.4.1",
+    "minimist": "^1.1.0",
     "node-toybox": "^0.1.3",
     "serve-static": "^1.6.3",
     "uglify-js": "^2.4.15"
