--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-webapp-assets",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Webapp Assets Middleware/Server/Generator for Express",
   "author": "Dongsu Jang <iolothebard@gmail.com>",
   "repository": {
@@ -13,23 +13,26 @@
   },
   "dependencies": {
     "coffee-script": "^1.8.0",
+    "csslint": "^0.10.0",
     "cssmin": "^0.4.2",
     "debug": "^2.1.0",
-    "express": "^4.10.2",
+    "express": "^4.11.1",
+    "htmllint": "^0.2.2",
     "jade": "^1.7.0",
+    "jshint": "^2.6.0",
     "less": "^2.0.0",
     "lodash": "^2.4.1",
     "minimist": "^1.1.0",
     "node-toybox": "^0.1.3",
-    "serve-static": "^1.6.3",
+    "serve-static": "^1.8.1",
     "uglify-js": "^2.4.15"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "latest",
     "grunt-doxx": "^0.1.2",
-    "grunt-mocha-test": "^0.12.0",
-    "mocha": "^1.21.4",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^2.1.0",
     "superagent": "^0.21.0",
     "supertest": "^0.15.0"
   },
